# Little_lemon

./: package-lock.json  package.json  pyproject.toml
Little_lemon/: asgi.py  settings.py  urls.py  wsgi.py
templates/base/: base.html
templates/home/: home.html
